# deeplll

./: Cargo.toml  result.txt  result15.txt  result20-99.txt  result20.txt  result25-99.txt  result25.txt  result30-99.txt  summary.ipynb
matrices/random/: random.txt
matrices_analysis/: M_det.csv
results/deeplll/: svpchallengedim40seed0.txt
results_summary/: random.csv  summary.csv  svp.csv
src/: gen_mat.rs  lib.rs  main.rs  parse.rs
src/deeplll/: matrix.rs  mod.rs  mu.rs  vector.rs
