[package]
name = "deeplll"
version = "0.1.0"
authors = ["Odagawa <xtctl.1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.11.0"
ndarray = "0.14.0"
regex = "1.4.3"

[profile.release]
opt-level = 3
debug = true
lto = true
overflow-checks = false
