[package]
name = "deeplll"
version = "0.1.0"
authors = ["Odagawa <xtctl.1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
average = "0.10.6"
rug = "1.11.0"
ndarray = "0.14.0"
once_cell = "1.5.2"
regex = "1.4.3"
rand = "0.8.3"
rand_xoshiro = "0.6.0"

[profile.release]
opt-level = 3
debug = true
lto = true
overflow-checks = false
